# AVR128DA48-BD

./: .gitignore  README.md
avr128da_boot/: CMakeLists.txt  README.md
avr128da_boot/src/ap/: ap.c
avr128da_boot/src/ap/boot/: boot.c  boot.h
avr128da_boot/src/bsp/: bsp.c
avr128da_boot/src/common/: def.h  err_code.h
avr128da_boot/src/common/core/: qbuffer.c  util.c
avr128da_boot/src/hw/: hw.c  hw.h  hw_def.h
avr128da_boot/src/hw/driver/: button.c  flash.c  info.c  uart.c
avr128da_fw/: CMakeLists.txt  README.md
avr128da_fw/src/: main.c  main.h
avr128da_fw/src/ap/: ap.c  ap.h  ap_def.h
avr128da_fw/src/bsp/: assembler.S  assembler.h  bsp.c  bsp.h
avr128da_fw/src/common/: def.h
avr128da_fw/src/common/core/: qblock.c  qblock.h  qbuffer.h
avr128da_fw/src/common/hw/include/: button.h  buzzer.h  dxl.h  gpio.h  ir_remote.h  lcd.h  led.h  reset.h  spi.h  sw_timer.h  uart.h
avr128da_fw/src/common/hw/include/dxl/: dxl_uart.h
avr128da_fw/src/common/hw/include/lcd/: ssd1306.h
avr128da_fw/src/hw/: hw.c  hw.h  hw_def.h
avr128da_fw/src/hw/driver/: button.c  buzzer.c  can.c  cli.c  dxl.c  flash.c  gpio.c  info.c  ir_remote.c  lcd.c  led.c  mcp2515.c  reset.c  spi.c  sw_timer.c  uart.c
avr128da_fw/src/hw/driver/dxl/: dxl_uart.c
avr128da_fw/src/hw/driver/hangul/: font_eng.h  font_han.h  han.c
avr128da_fw/src/hw/driver/lcd/: lcd_fonts.c  ssd1306.c
avr128da_fw/tools/: avr-gcc.cmake
avr128da_fw/tools/mac/: avr128da_ld
avr128da_ld/: CMakeLists.txt
avr128da_ld/src/ap/: ap.c  ap.h  ap_def.h
avr128da_ld/src/ap/include/: boot.h  cli_run.h
avr128da_ld/src/common/: def.h
avr128da_ld/src/hw/: hw.h  hw_def.h
(+14 files in other folders)
